去掉不需要的依赖

--- a/swak-core/pom.xml
+++ b/swak-core/pom.xml
@@ -33,7 +33,6 @@
 					<groupId>commons-logging</groupId>
 					<artifactId>commons-logging</artifactId>
 				</exclusion>
-				
 			</exclusions>
 		</dependency>
 		<dependency>
@@ -111,6 +110,24 @@
 			<groupId>de.ruedigermoeller</groupId>
 			<artifactId>fst</artifactId>
 			<version>${fst.version}</version>
+			<exclusions>
+				<exclusion>
+					<groupId>com.cedarsoftware</groupId>
+					<artifactId>java-util</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>org.objenesis</groupId>
+					<artifactId>objenesis</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>org.javassist</groupId>
+					<artifactId>javassist</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>com.fasterxml.jackson.core</groupId>
+					<artifactId>jackson-core</artifactId>
+				</exclusion>
+			</exclusions>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
