--- a/swak-sample/src/main/resources/application.properties
+++ b/swak-sample/src/main/resources/application.properties
@@ -3,13 +3,13 @@ spring.application.serverSn = server-1-1
 
 # functions default enable
 #spring.application.enableRedis=true
-spring.application.enableEventBus=false
-spring.application.enableSecurity=false
-spring.application.enableBooter=false
+#spring.application.enableEventBus=false
+#spring.application.enableSecurity=false
+#spring.application.enableBooter=false
 #spring.application.enableDataBase=false
 #spring.application.enableMybatis=false
-spring.application.enableWorkers=false
-spring.application.enableSession=false
+#spring.application.enableWorkers=false
+#spring.application.enableSession=false
 #spring.application.enableActuator=false
 
 # server
