--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
 		<module>swak-actuator</module>
 		<module>swak-sample</module>
 		<module>swak-starter-web</module>
+		<module>swak-rpc</module>
 	</modules>
 	<properties>
 		<spring-boot.version>2.0.1.RELEASE</spring-boot.version>
