--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
 		<module>swak-sample</module>
 		<module>swak-starter-web</module>
 		<module>swak-rpc</module>
+		<module>swak-starter-rpc</module>
 	</modules>
 	<properties>
 		<spring-boot.version>2.0.1.RELEASE</spring-boot.version>
@@ -107,6 +108,16 @@
 			<dependency>
 				<groupId>com.swak</groupId>
 				<artifactId>swak-starter-web</artifactId>
+				<version>${project.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>com.swak</groupId>
+				<artifactId>swak-rpc</artifactId>
+				<version>${project.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>com.swak</groupId>
+				<artifactId>swak-starter-rpc</artifactId>
 				<version>${project.version}</version>
 			</dependency>
 		</dependencies>
