--- a/swak-starter-rpc/pom.xml
+++ b/swak-starter-rpc/pom.xml
@@ -6,7 +6,7 @@
 		<artifactId>swak</artifactId>
 		<version>0.0.7_final</version>
 	</parent>
-	<artifactId>swak-rpc</artifactId>
+	<artifactId>swak-starter-rpc</artifactId>
 	<dependencies>
 		<dependency>
 			<groupId>com.swak</groupId>
@@ -14,25 +14,7 @@
 		</dependency>
 		<dependency>
 			<groupId>com.swak</groupId>
-			<artifactId>swak-redis</artifactId>
+			<artifactId>swak-rpc</artifactId>
 		</dependency>
-		<!-- 基于 zookeeper 的注册
-		<dependency>
-			<groupId>org.apache.curator</groupId>
-			<artifactId>curator-recipes</artifactId>
-			<version>4.0.1</version>
-			<exclusions>
-				<exclusion>
-					<groupId>org.apache.zookeeper</groupId>
-					<artifactId>zookeeper</artifactId>
-				</exclusion>
-			</exclusions>
-		</dependency>
-		<dependency>
-			<groupId>org.apache.zookeeper</groupId>
-			<artifactId>zookeeper</artifactId>
-			<version>3.4.12</version>
-		</dependency>
-		 -->
 	</dependencies>
 </project>
