--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
 		<module>swak-rpc</module>
 		<module>swak-starter-rpc</module>
 		<module>swak-sample-rpc</module>
+		<module>swak-groovy</module>
 	</modules>
 	<properties>
 		<spring-boot.version>2.0.1.RELEASE</spring-boot.version>
@@ -29,21 +30,18 @@
 		<slf4j.version>1.7.5</slf4j.version>
 		<netty.version>4.1.25.Final</netty.version>
 		<micrometer.version>1.0.4</micrometer.version>
-		<commons-lang3.version>3.3.2</commons-lang3.version>
-		<commons-codec.version>1.8</commons-codec.version>
 		<ehcache.version>2.10.5</ehcache.version>
 		<lettuce.version>5.0.4.RELEASE</lettuce.version>
-		<fst.version>2.48</fst.version>
 		<kryo.version>4.0.2</kryo.version>
 		<kotlin.version>1.2.51</kotlin.version>
 		<kotlin.coroutines.version>0.23.4</kotlin.coroutines.version>
+		<groovy.version>2.5.0</groovy.version>
 		<mybatis.version>3.4.6</mybatis.version>
 		<mybatis-spring.version>1.3.2</mybatis-spring.version>
 		<druid.version>1.1.6</druid.version>
 		<HikariCP.version>3.1.0</HikariCP.version>
 		<reactor.version>3.1.7.RELEASE</reactor.version>
 		<async.httpclient.version>2.4.7</async.httpclient.version>
-		<guava.version>25.1-jre</guava.version>
 
 		<!-- test -->
 		<junit.version>4.12</junit.version>
