测试中加入motan， 自动配置的注意事项

--- a/swak-sample/pom.xml
+++ b/swak-sample/pom.xml
@@ -38,6 +38,10 @@
 			<groupId>com.swak</groupId>
 			<artifactId>swak-actuator</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>com.swak</groupId>
+			<artifactId>swak-motan</artifactId>
+		</dependency>
 
 		<!-- 项目的特定配置 -->
 		<dependency>
