感谢开源，终于把 motan调好了， 可以回家了

--- a/swak-sample-rpc/pom.xml
+++ b/swak-sample-rpc/pom.xml
@@ -12,5 +12,13 @@
 			<groupId>com.swak</groupId>
 			<artifactId>swak-starter-rpc</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>com.swak</groupId>
+			<artifactId>swak-motan</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.swak</groupId>
+			<artifactId>swak-sample-api</artifactId>
+		</dependency>
 	</dependencies>
 </project>
