--- a/swak-sample-rpc/src/main/resources/application.properties
+++ b/swak-sample-rpc/src/main/resources/application.properties
@@ -1,11 +1,13 @@
 # application
 spring.application.serverSn = server-1-1
 
-# server
-spring.rpc-server.host=127.0.0.1
-spring.rpc-server.port=8080
-spring.rpc-server.mode=EPOLL
+# Motan Registry config
 
-# redis cache
-spring.cache.hosts=127.0.0.1:6379
-spring.cache.password=12345678....
+# use local
+spring.motan.registry.regProtocol=local
+
+# Motan BasicService config
+spring.motan.basicservice.application=demo
+spring.motan.basicservice.exportPort=8888
+spring.motan.basicservice.accessLog=false
+spring.motan.basicservice.shareChannel=true
