--- a/swak-sample/src/main/resources/application.properties
+++ b/swak-sample/src/main/resources/application.properties
@@ -32,3 +32,11 @@ spring.datasource.maxActive= 200
 
 # system
 adminPath=admin
+
+# Motan
+spring.motan.registry.regProtocol=direct
+spring.motan.registry.address=localhost:8888
+spring.motan.basicreferer.application=demo
+spring.motan.basicreferer.accessLog=false
+spring.motan.basicreferer.retries=3
+spring.motan.basicreferer.throwException=true
