--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
 		<module>swak-groovy</module>
 		<module>swak-storage</module>
 		<module>swak-motan</module>
+		<module>swak-sample-api</module>
 	</modules>
 	<properties>
 		<spring-boot.version>2.0.3.RELEASE</spring-boot.version>
@@ -44,8 +45,8 @@
 		<HikariCP.version>3.2.0</HikariCP.version>
 		<reactor.version>3.1.8.RELEASE</reactor.version>
 		<async.httpclient.version>2.5.2</async.httpclient.version>
-        <motan.version>1.1.1</motan.version>
-        
+		<motan.version>1.1.1</motan.version>
+
 		<!-- test -->
 		<junit.version>4.12</junit.version>
 
@@ -132,6 +133,13 @@
 			<dependency>
 				<groupId>com.swak</groupId>
 				<artifactId>swak-starter-rpc</artifactId>
+				<version>${project.version}</version>
+			</dependency>
+
+			<!-- 测试 -->
+			<dependency>
+				<groupId>com.swak</groupId>
+				<artifactId>swak-sample-api</artifactId>
 				<version>${project.version}</version>
 			</dependency>
 		</dependencies>
