motan 的监控，这就是我喜欢motan 的原因，简单。不过endpoint 的参数还需要研究下

--- a/swak-actuator/pom.xml
+++ b/swak-actuator/pom.xml
@@ -22,6 +22,17 @@
 			<artifactId>swak-jdbc</artifactId>
 			<scope>provided</scope>
 		</dependency>
+		<dependency>
+			<groupId>com.swak</groupId>
+			<artifactId>swak-motan</artifactId>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.weibo</groupId>
+			<artifactId>motan-registry-zookeeper</artifactId>
+			<version>${motan.version}</version>
+			<scope>provided</scope>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
