--- a/swak-motan/pom.xml
+++ b/swak-motan/pom.xml
@@ -25,6 +25,10 @@
 					<groupId>org.slf4j</groupId>
 					<artifactId>slf4j-api</artifactId>
 				</exclusion>
+				<exclusion>
+					<groupId>commons-pool</groupId>
+					<artifactId>commons-pool</artifactId>
+				</exclusion>
 			</exclusions>
 		</dependency>
 		<dependency>
