--- a/swak-motan/pom.xml
+++ b/swak-motan/pom.xml
@@ -77,7 +77,6 @@
 			<groupId>com.weibo</groupId>
 			<artifactId>motan-registry-zookeeper</artifactId>
 			<version>${motan.version}</version>
-			<scope>provided</scope>
 			<exclusions>
 				<exclusion>
 					<groupId>log4j</groupId>
@@ -95,7 +94,16 @@
 					<groupId>io.netty</groupId>
 					<artifactId>netty</artifactId>
 				</exclusion>
+				<exclusion>
+					<groupId>com.101tec</groupId>
+					<artifactId>zkclient</artifactId>
+				</exclusion>
 			</exclusions>
+		</dependency>
+		<dependency>
+			<groupId>com.101tec</groupId>
+			<artifactId>zkclient</artifactId>
+			<version>0.10</version>
 		</dependency>
 		<dependency>
 			<groupId>com.swak</groupId>
