--- a/swak-sample/src/main/resources/application.properties
+++ b/swak-sample/src/main/resources/application.properties
@@ -34,8 +34,10 @@ spring.datasource.maxActive= 200
 adminPath=admin
 
 # Motan
-spring.motan.registry.regProtocol=direct
-spring.motan.registry.address=localhost:8888
+# use zookeeper
+spring.motan.registry.regProtocol=zookeeper
+spring.motan.registry.address=127.0.0.1
+spring.motan.registry.port=2181
 spring.motan.basicreferer.application=demo
 spring.motan.basicreferer.accessLog=false
 spring.motan.basicreferer.retries=3
