--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,7 @@
 		<module>swak-vertx</module>
 		<module>swak-starter-vertx</module>
 		<module>swak-starter</module>
+		<module>swak-sample-vertx</module>
 	</modules>
 	<properties>
 		<spring-boot.version>2.0.3.RELEASE</spring-boot.version>
