--- a/swak-actuator/pom.xml
+++ b/swak-actuator/pom.xml
@@ -33,6 +33,11 @@
 			<version>${motan.version}</version>
 			<scope>provided</scope>
 		</dependency>
+		<dependency>
+			<groupId>com.swak</groupId>
+			<artifactId>swak-vertx</artifactId>
+			<scope>provided</scope>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
