vertx 中 数据库和 redis 的支持

--- a/swak-starter-vertx/pom.xml
+++ b/swak-starter-vertx/pom.xml
@@ -16,5 +16,15 @@
 			<groupId>com.swak</groupId>
 			<artifactId>swak-vertx</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>com.swak</groupId>
+			<artifactId>swak-jdbc</artifactId>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.swak</groupId>
+			<artifactId>swak-redis</artifactId>
+			<scope>provided</scope>
+		</dependency>
 	</dependencies>
 </project>
