--- a/swak-actuator/pom.xml
+++ b/swak-actuator/pom.xml
@@ -32,6 +32,12 @@
 			<artifactId>swak-vertx</artifactId>
 			<scope>provided</scope>
 		</dependency>
+		<dependency>
+			<groupId>io.vertx</groupId>
+			<artifactId>vertx-dropwizard-metrics</artifactId>
+			<version>${vertx.version}</version>
+			<scope>provided</scope>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
