--- a/swak-starter-vertx/pom.xml
+++ b/swak-starter-vertx/pom.xml
@@ -28,6 +28,12 @@
 		</dependency>
 		<dependency>
 			<groupId>io.vertx</groupId>
+			<artifactId>vertx-dropwizard-metrics</artifactId>
+			<version>${vertx.version}</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>io.vertx</groupId>
 			<artifactId>vertx-zookeeper</artifactId>
 			<version>${vertx.version}</version>
 			<scope>provided</scope>
