--- a/swak-sample-vertx/src/main/resources/application.properties
+++ b/swak-sample-vertx/src/main/resources/application.properties
@@ -1,4 +1,11 @@
+# vertx
 spring.vertx.port=8080
 spring.vertx.mode=EPOLL
 spring.vertx.workers.read_pool=5
 spring.vertx.workers.write_pool=15
+
+# data base default mybatis
+spring.datasource.url = jdbc:mysql://localhost:3306/cloud?useUnicode=true&characterEncoding=utf-8
+spring.datasource.username = root
+spring.datasource.password = rootadmin
+spring.datasource.maxActive= 40
