--- a/swak-sample/src/main/resources/application.properties
+++ b/swak-sample/src/main/resources/application.properties
@@ -22,7 +22,7 @@ spring.cache.hosts=127.0.0.1:6379
 spring.cache.password=12345678....
 
 # data base default mybatis
-spring.datasource.url = jdbc:mysql://localhost:3306/shop?useUnicode=true&characterEncoding=utf-8
+spring.datasource.url = jdbc:mysql://localhost:3306/shop?useUnicode=true&characterEncoding=utf-8&serverTimezone=GMT%2B8
 spring.datasource.username = root
 spring.datasource.password = rootadmin
 spring.datasource.maxActive= 200
