二维码、jwt 等功能

--- a/swak-core/pom.xml
+++ b/swak-core/pom.xml
@@ -69,7 +69,7 @@
 			<artifactId>fastjson</artifactId>
 			<version>${fastjson.version}</version>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>io.projectreactor</groupId>
 			<artifactId>reactor-core</artifactId>
@@ -101,6 +101,12 @@
 					<artifactId>ant</artifactId>
 				</exclusion>
 			</exclusions>
+		</dependency>
+		<dependency>
+			<groupId>com.google.zxing</groupId>
+			<artifactId>core</artifactId>
+			<version>${qrcode.version}</version>
+			<scope>provided</scope>
 		</dependency>
 	</dependencies>
 </project>
