--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,7 @@
 		<async.httpclient.version>2.5.2</async.httpclient.version>
 		<motan.version>1.1.1</motan.version>
         <vertx.version>3.5.3</vertx.version>
+        <qrcode.version>3.3.3</qrcode.version>
         
 		<!-- test -->
 		<junit.version>4.12</junit.version>
