自动生成异步代码

--- a/swak-vertx/pom.xml
+++ b/swak-vertx/pom.xml
@@ -90,5 +90,10 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
+		<dependency>
+            <groupId>com.squareup</groupId>
+            <artifactId>javapoet</artifactId>
+            <version>${javapoet.version}</version>
+        </dependency>
 	</dependencies>
 </project>
