--- a/swak-vertx/pom.xml
+++ b/swak-vertx/pom.xml
@@ -94,6 +94,7 @@
             <groupId>com.squareup</groupId>
             <artifactId>javapoet</artifactId>
             <version>${javapoet.version}</version>
+            <scope>provided</scope>
         </dependency>
 	</dependencies>
 </project>
