核心包中少了一个jar

--- a/swak-core/pom.xml
+++ b/swak-core/pom.xml
@@ -9,6 +9,11 @@
 	<artifactId>swak-core</artifactId>
 	<packaging>jar</packaging>
 	<dependencies>
+	    <dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot</artifactId>
+			<version>${spring-boot.version}</version>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-core</artifactId>
