--- a/pom.xml
+++ b/pom.xml
@@ -52,13 +52,13 @@
 		<reactor.version>3.1.8.RELEASE</reactor.version>
 		<async.httpclient.version>2.5.2</async.httpclient.version>
 		<motan.version>1.1.1</motan.version>
-        <vertx.version>3.5.3</vertx.version>
-        <qrcode.version>3.3.3</qrcode.version>
-        <javapoet.version>1.11.1</javapoet.version>
-        <zookeeper.version>3.4.8</zookeeper.version>
-        <zkclient.version>0.10</zkclient.version>
-        <metrics.version>4.0.2</metrics.version>
-        
+		<vertx.version>3.5.3</vertx.version>
+		<qrcode.version>3.3.3</qrcode.version>
+		<javapoet.version>1.11.1</javapoet.version>
+		<zookeeper.version>3.4.8</zookeeper.version>
+		<zkclient.version>0.10</zkclient.version>
+		<metrics.version>4.0.2</metrics.version>
+
 		<!-- test -->
 		<junit.version>4.12</junit.version>
 
@@ -152,7 +152,7 @@
 				<artifactId>swak-vertx</artifactId>
 				<version>${project.version}</version>
 			</dependency>
-			
+
 			<dependency>
 				<groupId>com.swak</groupId>
 				<artifactId>swak-starter-rpc</artifactId>
@@ -163,7 +163,7 @@
 				<artifactId>swak-starter-vertx</artifactId>
 				<version>${project.version}</version>
 			</dependency>
-			
+
 			<dependency>
 				<groupId>com.swak</groupId>
 				<artifactId>swak-starter</artifactId>
@@ -178,6 +178,19 @@
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
+
+	<distributionManagement>
+		<repository>
+			<id>nexus-releases</id>
+			<name>Team Nesus Release Repository</name>
+			<url>http://192.168.0.222:7001/nexus/content/repositories/releases/</url>
+		</repository>
+		<snapshotRepository>
+			<id>nexus-snapshots</id>
+			<name>Team Nesus Snapshot Repository</name>
+			<url>http://192.168.0.222:7001/nexus/content/repositories/snapshots/</url>
+		</snapshotRepository>
+	</distributionManagement>
 
 	<!-- 插件配置 -->
 	<build>
