--- a/swak-motan/pom.xml
+++ b/swak-motan/pom.xml
@@ -85,5 +85,10 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
+		<dependency>
+			<groupId>com.esotericsoftware</groupId>
+			<artifactId>kryo-shaded</artifactId>
+			<version>${kryo.version}</version>
+		</dependency>
 	</dependencies>
 </project>
