--- a/swak-sample/src/main/resources/application.properties
+++ b/swak-sample/src/main/resources/application.properties
@@ -22,16 +22,15 @@ spring.cache.hosts=127.0.0.1:6379
 spring.cache.password=12345678....
 
 # data base default mybatis
-spring.datasource.url = jdbc:mysql://localhost:3306/shop?useUnicode=true&characterEncoding=utf-8&serverTimezone=GMT%2B8
-spring.datasource.username = root
-spring.datasource.password = rootadmin
-spring.datasource.maxActive= 200
+spring.datasource.db = sqlite
+spring.datasource.url=resource:SWAK.db
+#spring.datasource.url = jdbc:mysql://localhost:3306/shop?useUnicode=true&characterEncoding=utf-8&serverTimezone=GMT%2B8
+#spring.datasource.username = root
+#spring.datasource.password = rootadmin
+#spring.datasource.maxActive= 200
 
 # actuator
 #spring.trace.storageChannel=STDOUT
-
-# system
-adminPath=admin
 
 # Motan
 # use zookeeper
