--- a/swak-sample/src/main/resources/application.properties
+++ b/swak-sample/src/main/resources/application.properties
@@ -11,7 +11,7 @@ spring.application.serverSn = server-1-1
 #spring.application.enableWorkers=false
 #spring.application.enableSession=false
 #spring.application.enableActuator=false
-#spring.application.enableMotan=false
+spring.application.enableMotan=false
 
 # server
 spring.http-server.port=8080
