测试数据库

--- a/swak-sample/src/main/resources/application.properties
+++ b/swak-sample/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 spring.application.serverSn = server-1-1
 
 # functions default enable
-#spring.application.enableRedis=true
+spring.application.enableRedis=true
 #spring.application.enableEventBus=false
 #spring.application.enableSecurity=false
 #spring.application.enableBooter=false
@@ -18,8 +18,8 @@ spring.http-server.port=8080
 spring.http-server.mode=EPOLL
 
 # redis cache
-spring.cache.hosts=127.0.0.1:6379
-spring.cache.password=12345678....
+#spring.cache.hosts=127.0.0.1:6379
+#spring.cache.password=12345678....
 
 # data base default mybatis
 spring.datasource.db = sqlite
@@ -34,10 +34,10 @@ spring.datasource.url=resource:SWAK.db
 
 # Motan
 # use zookeeper
-spring.motan.registry.regProtocol=zookeeper
-spring.motan.registry.address=127.0.0.1
-spring.motan.registry.port=2181
-spring.motan.basicreferer.application=demo
-spring.motan.basicreferer.accessLog=false
-spring.motan.basicreferer.retries=3
-spring.motan.basicreferer.throwException=true
+#spring.motan.registry.regProtocol=zookeeper
+#spring.motan.registry.address=127.0.0.1
+#spring.motan.registry.port=2181
+#spring.motan.basicreferer.application=demo
+##spring.motan.basicreferer.accessLog=false
+#spring.motan.basicreferer.retries=3
+#spring.motan.basicreferer.throwException=true
