--- a/swak-sample/src/main/resources/application.properties
+++ b/swak-sample/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 spring.application.serverSn = server-1-1
 
 # functions default enable
-spring.application.enableRedis=true
+#spring.application.enableRedis=true
 #spring.application.enableEventBus=false
 #spring.application.enableSecurity=false
 #spring.application.enableBooter=false
@@ -18,12 +18,12 @@ spring.http-server.port=8080
 spring.http-server.mode=EPOLL
 
 # redis cache
-#spring.cache.hosts=127.0.0.1:6379
-#spring.cache.password=12345678....
+spring.cache.hosts=127.0.0.1:6379
+spring.cache.password=12345678....
 
 # data base default mybatis
 spring.datasource.db = sqlite
-spring.datasource.url=resource:SWAK.db
+spring.datasource.url=/home/lifeng/git/swak/swak-sample/src/main/resources/SWAK.db
 #spring.datasource.url = jdbc:mysql://localhost:3306/shop?useUnicode=true&characterEncoding=utf-8&serverTimezone=GMT%2B8
 #spring.datasource.username = root
 #spring.datasource.password = rootadmin
