--- a/swak-kotlin/pom.xml
+++ b/swak-kotlin/pom.xml
@@ -7,7 +7,13 @@
 		<version>0.1.2_final</version>
 	</parent>
 	<artifactId>swak-kotlin</artifactId>
-	<dependencies>
+
+    <properties>
+        <kotlin.version>1.3.0</kotlin.version>
+    </properties>
+
+
+    <dependencies>
 		<!-- http -->
 		<dependency>
 			<groupId>com.swak</groupId>
@@ -19,7 +25,7 @@
 		</dependency>
 		<dependency>
 			<groupId>org.jetbrains.kotlin</groupId>
-			<artifactId>kotlin-stdlib</artifactId>
+			<artifactId>kotlin-stdlib-jdk8</artifactId>
 			<version>${kotlin.version}</version>
 		</dependency>
 		<dependency>
@@ -32,14 +38,20 @@
 			<artifactId>kotlinx-coroutines-reactor</artifactId>
 			<version>${kotlin.coroutines.version}</version>
 		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>org.jetbrains.kotlin</groupId>
+            <artifactId>kotlin-test</artifactId>
+            <version>${kotlin.version}</version>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
 	<build>
 		<plugins>
 			<plugin>
 				<groupId>org.jetbrains.kotlin</groupId>
 				<artifactId>kotlin-maven-plugin</artifactId>
 				<version>${kotlin.version}</version>
-				<configuration>
+                <configuration>
 					<jvmTarget>1.8</jvmTarget>
 				</configuration>
 			</plugin>
