--- a/swak-swt/src/main/resources/application.properties
+++ b/swak-swt/src/main/resources/application.properties
@@ -1,2 +1,3 @@
 # SERVER CONFIG
 server.name=\u7CFB\u7EDF\u7BA1\u7406\u5C0F\u5DE5\u5177
+server.page=http://element-cn.eleme.io/2.4/#/zh-CN/component/changelog
