--- a/pom.xml
+++ b/pom.xml
@@ -59,9 +59,9 @@
 		<zookeeper.version>3.4.8</zookeeper.version>
 		<zkclient.version>0.10</zkclient.version>
 		<metrics.version>4.0.2</metrics.version>
-        <quartz.version>2.2.3</quartz.version>
-        <swt.version>1.0</swt.version>
-         
+		<quartz.version>2.2.3</quartz.version>
+		<swt.version>1.0</swt.version>
+
 		<!-- test -->
 		<junit.version>4.12</junit.version>
 
@@ -77,7 +77,7 @@
 		<project.version>${project.version}</project.version>
 	</properties>
 	<repositories>
-	    <repository>
+		<repository>
 			<id>nexus-repos</id>
 			<name>Team Nexus Repository</name>
 			<url>http://192.168.0.222:7001/nexus/content/groups/public</url>
@@ -215,6 +215,18 @@
 					<target>${jdk.version}</target>
 					<encoding>${project.build.sourceEncoding}</encoding>
 				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-source-plugin</artifactId>
+				<executions>
+					<execution>
+						<id>attach-sources</id>
+						<goals>
+							<goal>jar</goal>
+						</goals>
+					</execution>
+				</executions>
 			</plugin>
 		</plugins>
 		<resources>
