--- a/swak-swt/pom.xml
+++ b/swak-swt/pom.xml
@@ -60,6 +60,11 @@
 		</dependency>
 		<dependency>
 			<groupId>org.swt</groupId>
+			<artifactId>org.eclipse.swt.win32.win32.x86_3.108.0.v20180904</artifactId>
+			<version>${swt.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.swt</groupId>
 			<artifactId>org.eclipse.swt_3.108.0.v20180904</artifactId>
 			<version>${swt.version}</version>
 		</dependency>
