还差一个nio 读取inputStream

--- a/swak-sample/pom.xml
+++ b/swak-sample/pom.xml
@@ -72,7 +72,7 @@
 				<version>${spring-boot.version}</version>
 				<configuration>
 					<fork>true</fork>
-					<mainClass>com.hituan.AppRunner</mainClass>
+					<mainClass>com.tmt.AppRunner</mainClass>
 				</configuration>
 				<executions>
                     <execution>
