优化数据发送流程

--- a/swak-sample/src/main/resources/application.properties
+++ b/swak-sample/src/main/resources/application.properties
@@ -19,6 +19,7 @@ spring.application.enableMotan=false
 # server
 spring.http-server.port=8080
 spring.http-server.mode=EPOLL
+spring.http-server.statics=static/
 
 # redis cache
 spring.cache.hosts=127.0.0.1:6379
