优化加载顺序

--- a/swak-sample/src/main/resources/application.properties
+++ b/swak-sample/src/main/resources/application.properties
@@ -27,7 +27,7 @@ spring.cache.password=12345678....
 
 # data base default mybatis - sqlite
 spring.datasource.db = sqlite
-spring.datasource.url=file:sqlite/SWAK.db
+spring.datasource.url=classpath:sqlite/SWAK.db
 # data base default mybatis - h2
 #spring.datasource.db = h2
 #spring.datasource.url=jdbc:h2:file:/home/lifeng/git/swak/swak-sample/src/main/resources/h2/SWAK
