--- a/swak-swt/pom.xml
+++ b/swak-swt/pom.xml
@@ -48,23 +48,21 @@
 			<artifactId>org.eclipse.osgi_3.13.100.v20180827</artifactId>
 			<version>${swt.version}</version>
 		</dependency>
-		<!-- 
 		<dependency>
 			<groupId>org.swt</groupId>
 			<artifactId>org.eclipse.swt.gtk.linux.x86_64_3.108.0.v20180904</artifactId>
 			<version>${swt.version}</version>
-		</dependency> -->
+		</dependency>
 		<dependency>
 			<groupId>org.swt</groupId>
 			<artifactId>org.eclipse.swt.win32.win32.x86_64_3.108.0.v20180904</artifactId>
 			<version>${swt.version}</version>
 		</dependency>
-		<!-- 
 		<dependency>
 			<groupId>org.swt</groupId>
 			<artifactId>org.eclipse.swt.win32.win32.x86_3.108.0.v20180904</artifactId>
 			<version>${swt.version}</version>
-		</dependency> -->
+		</dependency>
 		<dependency>
 			<groupId>org.swt</groupId>
 			<artifactId>org.eclipse.swt_3.108.0.v20180904</artifactId>
