--- a/pom.xml
+++ b/pom.xml
@@ -155,6 +155,11 @@
 			</dependency>
 			<dependency>
 				<groupId>com.swak</groupId>
+				<artifactId>swak-excel</artifactId>
+				<version>${project.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>com.swak</groupId>
 				<artifactId>swak-motan</artifactId>
 				<version>${project.version}</version>
 			</dependency>
