--- a/swak-sample/src/main/resources/application.properties
+++ b/swak-sample/src/main/resources/application.properties
@@ -18,7 +18,7 @@ spring.application.enableMotan=false
 
 # server
 spring.http-server.port=8080
-spring.http-server.mode=EPOLL
+spring.http-server.mode=OS
 spring.http-server.statics=/static/
 
 # redis cache
@@ -26,14 +26,14 @@ spring.cache.hosts=127.0.0.1:6379
 spring.cache.password=12345678....
 
 # data base default mybatis - sqlite
-spring.datasource.db = sqlite
-spring.datasource.url=classpath:sqlite/SWAK.db
+#spring.datasource.db = sqlite
+#spring.datasource.url=classpath:sqlite/SWAK.db
 # data base default mybatis - h2
-#spring.datasource.db = h2
-#spring.datasource.url=jdbc:h2:file:/home/lifeng/git/swak/swak-sample/src/main/resources/h2/SWAK
-#spring.datasource.username = root
-#spring.datasource.password = rootadmin
-#spring.datasource.maxActive= 200
+spring.datasource.db = h2
+spring.datasource.url=jdbc:h2:file:/home/lifeng/git/swak/swak-sample/src/main/resources/h2/SWAK
+spring.datasource.username = root
+spring.datasource.password = rootadmin
+spring.datasource.maxActive= 200
 # data base default mybatis - mysql
 #spring.datasource.url = jdbc:mysql://localhost:3306/shop?useUnicode=true&characterEncoding=utf-8&serverTimezone=GMT%2B8
 #spring.datasource.username = root
