打包，安装基本成功

--- a/swak-swt/src/test/resources/application.properties
+++ b/swak-swt/src/test/resources/application.properties
@@ -15,4 +15,4 @@ spring.http-server.mode=EPOLL
 
 # data base default mybatis - sqlite
 spring.datasource.db = sqlite
-spring.datasource.url=/home/lifeng/git/hituan/hituan-local/src/main/resources/sqlite/SWAK.db
+spring.datasource.url= file:/home/lifeng/git/hituan/hituan-local/src/main/db/sqlite/SWAK.db
