--- a/swak-swt/pom.xml
+++ b/swak-swt/pom.xml
@@ -69,23 +69,23 @@
 			<version>${swt.version}</version>
 		</dependency>
 		
-		<!-- 环境相关
+		<!-- 环境相关-->
 		<dependency>
 			<groupId>org.swt</groupId>
 			<artifactId>org.eclipse.swt.gtk.linux.x86_64_3.108.0.v20180904</artifactId>
 			<version>${swt.version}</version>
-		</dependency>-->
+		</dependency>
 		<dependency>
 			<groupId>org.swt</groupId>
 			<artifactId>org.eclipse.swt.win32.win32.x86_64_3.108.0.v20180904</artifactId>
 			<version>${swt.version}</version>
 		</dependency>
-		<!-- 
+		<!--  -->
 		<dependency>
 			<groupId>org.swt</groupId>
 			<artifactId>org.eclipse.swt.win32.win32.x86_3.108.0.v20180904</artifactId>
 			<version>${swt.version}</version>
-		</dependency> -->
+		</dependency>
 		<dependency>
 			<groupId>org.jcef</groupId>
 			<artifactId>jcef</artifactId>
