简单支持 定时任务

--- a/swak-starter-web/pom.xml
+++ b/swak-starter-web/pom.xml
@@ -45,6 +45,11 @@
 			<artifactId>swak-motan</artifactId>
 			<scope>provided</scope>
 		</dependency>
+		<dependency>
+			<groupId>com.swak</groupId>
+			<artifactId>swak-quartz</artifactId>
+			<scope>provided</scope>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
