--- a/pom.xml
+++ b/pom.xml
@@ -141,6 +141,11 @@
 			</dependency>
 			<dependency>
 				<groupId>com.swak</groupId>
+				<artifactId>swak-quartz</artifactId>
+				<version>${project.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>com.swak</groupId>
 				<artifactId>swak-starter-web</artifactId>
 				<version>${project.version}</version>
 			</dependency>
