--- a/swak-sample/src/main/resources/application.properties
+++ b/swak-sample/src/main/resources/application.properties
@@ -4,6 +4,9 @@
 # application
 spring.application.serverSn = server-1-1
 
+# config env
+spring.profiles.active=dev
+
 # functions default enable
 #spring.application.enableRedis=true
 #spring.application.enableEventBus=false
@@ -16,7 +19,7 @@ spring.application.serverSn = server-1-1
 #spring.application.enableActuator=false
 spring.application.enableMotan=false
 
-# server
+# server config
 spring.http-server.port=8080
 spring.http-server.mode=OS
 spring.http-server.statics=/static/
@@ -25,6 +28,7 @@ spring.http-server.statics=/static/
 spring.cache.hosts=127.0.0.1:6379
 spring.cache.password=12345678....
 
+# database config
 # data base default mybatis - sqlite
 spring.datasource.db = sqlite
 spring.datasource.url= file:src/main/db/sqlite/SWAK.db
@@ -40,11 +44,17 @@ spring.datasource.url= file:src/main/db/sqlite/SWAK.db
 #spring.datasource.password = rootadmin
 #spring.datasource.maxActive= 200
 
-# actuator
+# data base default mybatis - sharding
+#spring.datasource.db = sharding
+#spring.datasource.url = jdbc:mysql://localhost:3306/shop?useUnicode=true&characterEncoding=utf-8&serverTimezone=GMT%2B8
+#spring.datasource.username = root
+#spring.datasource.password = rootadmin
+#spring.datasource.maxActive= 20
+
+# actuator config
 #spring.trace.storageChannel=STDOUT
 
-# Motan
-# use zookeeper
+# motan config
 #spring.motan.registry.regProtocol=zookeeper
 #spring.motan.registry.address=127.0.0.1
 #spring.motan.registry.port=2181
