--- a/swak-sample/src/main/resources/application.properties
+++ b/swak-sample/src/main/resources/application.properties
@@ -30,8 +30,8 @@ spring.cache.password=12345678....
 
 # database config
 # data base default mybatis - sqlite
-spring.datasource.db = sqlite
-spring.datasource.url= file:src/main/db/sqlite/SWAK.db
+#spring.datasource.db = sqlite
+#spring.datasource.url= file:src/main/db/sqlite/SWAK.db
 # data base default mybatis - h2
 #spring.datasource.db = h2
 #spring.datasource.url=jdbc:h2:file:./src/main/db/h2/SWAK
