--- a/swak-sample/src/main/resources/application-dev.properties
+++ b/swak-sample/src/main/resources/application-dev.properties
@@ -1,5 +1,10 @@
-sharding.jdbc.datasource.names=ds_0
+sharding.jdbc.datasource.names=ds
 
-sharding.jdbc.datasource.ds_0.url=jdbc:mysql://localhost:3306/shop?useUnicode=true&characterEncoding=utf-8&serverTimezone=GMT%2B8
-sharding.jdbc.datasource.ds_0.username=root
-sharding.jdbc.datasource.ds_0.password=rootadmin
+sharding.jdbc.datasource.ds.url=jdbc:mysql://localhost:3306/shop?useUnicode=true&characterEncoding=utf-8&serverTimezone=GMT%2B8
+sharding.jdbc.datasource.ds.username=root
+sharding.jdbc.datasource.ds.password=rootadmin
+
+sharding.jdbc.config.sharding.tables.t_order.actual-data-nodes=ds.t_order_$->{0..1}
+sharding.jdbc.config.sharding.tables.t_order.table-strategy.inline.sharding-column=order_id
+sharding.jdbc.config.sharding.tables.t_order.table-strategy.inline.algorithm-expression=t_order_$->{order_id % 2}
+sharding.jdbc.config.sharding.tables.t_order.key-generator-column-name=order_id
