--- a/swak-sample/src/main/resources/application-dev.properties
+++ b/swak-sample/src/main/resources/application-dev.properties
@@ -1,10 +1,11 @@
 sharding.jdbc.datasource.names=ds
 
-sharding.jdbc.datasource.ds.url=jdbc:mysql://localhost:3306/shop?useUnicode=true&characterEncoding=utf-8&serverTimezone=GMT%2B8
-sharding.jdbc.datasource.ds.username=root
-sharding.jdbc.datasource.ds.password=rootadmin
+# Use public config
+#sharding.jdbc.datasource.ds.url=jdbc:mysql://localhost:3306/shop?useUnicode=true&characterEncoding=utf-8&serverTimezone=GMT%2B8
+#sharding.jdbc.datasource.ds.username=root
+#sharding.jdbc.datasource.ds.password=rootadmin
 
 sharding.jdbc.config.sharding.tables.t_order.actual-data-nodes=ds.t_order_$->{0..1}
-sharding.jdbc.config.sharding.tables.t_order.table-strategy.inline.sharding-column=order_id
-sharding.jdbc.config.sharding.tables.t_order.table-strategy.inline.algorithm-expression=t_order_$->{order_id % 2}
-sharding.jdbc.config.sharding.tables.t_order.key-generator-column-name=order_id
+sharding.jdbc.config.sharding.tables.t_order.table-strategy.inline.sharding-column=id
+sharding.jdbc.config.sharding.tables.t_order.table-strategy.inline.algorithm-expression=t_order_$->{id % 2}
+sharding.jdbc.config.sharding.tables.t_order.key-generator-column-name=id
