--- a/swak-sample/src/main/resources/application.properties
+++ b/swak-sample/src/main/resources/application.properties
@@ -45,11 +45,11 @@ spring.cache.password=12345678....
 #spring.datasource.maxActive= 200
 
 # data base default mybatis - sharding
-#spring.datasource.db = sharding
-#spring.datasource.url = jdbc:mysql://localhost:3306/shop?useUnicode=true&characterEncoding=utf-8&serverTimezone=GMT%2B8
-#spring.datasource.username = root
-#spring.datasource.password = rootadmin
-#spring.datasource.maxActive= 20
+spring.datasource.db = sharding
+spring.datasource.url = jdbc:mysql://localhost:3306/store?useUnicode=true&characterEncoding=utf-8&serverTimezone=GMT%2B8&nullNamePatternMatchesAll=true
+spring.datasource.username = root
+spring.datasource.password = rootadmin
+spring.datasource.maxActive= 20
 
 # actuator config
 #spring.trace.storageChannel=STDOUT
