DefaultFileRegion 不能和压缩一起使用

--- a/swak-sample/src/main/resources/application.properties
+++ b/swak-sample/src/main/resources/application.properties
@@ -22,7 +22,9 @@ spring.application.enableMotan=false
 # server config
 spring.http-server.port=8080
 spring.http-server.mode=OS
-spring.http-server.statics=/static/
+spring.http-server.statics=classpath:/static/
+spring.http-server.readTimeout=5000
+spring.http-server.enableGzip=true
 
 # redis cache
 spring.cache.hosts=127.0.0.1:6379
