--- a/swak-sample/src/main/resources/application.properties
+++ b/swak-sample/src/main/resources/application.properties
@@ -25,6 +25,7 @@ spring.http-server.mode=OS
 spring.http-server.statics=classpath:/static/
 spring.http-server.readTimeout=5000
 spring.http-server.enableGzip=true
+spring.http-server.leakDetectionLevel = PARANOID
 
 # redis cache
 spring.cache.hosts=127.0.0.1:6379
