简化流程，支持重定向

--- a/swak-sample-vertx/pom.xml
+++ b/swak-sample-vertx/pom.xml
@@ -11,6 +11,12 @@
 		<dependency>
 			<groupId>com.swak</groupId>
 			<artifactId>swak-starter-vertx</artifactId>
+			<exclusions>
+				<exclusion>
+					<groupId>io.vertx</groupId>
+					<artifactId>vertx-zookeeper</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 		<dependency>
 			<groupId>com.swak</groupId>
