添加fx 的测试项目

--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,7 @@
 		<module>swak-package</module>
 		<module>swak-excel</module>
 		<module>swak-wechat</module>
+		<module>swak-fx</module>
 	</modules>
 	<properties>
 		<spring-boot.version>2.1.0.RELEASE</spring-boot.version>
